--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@react-native-firebase/app": "^15.5.0",
     "@react-native-firebase/database": "^15.6.0",
+    "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
+    "react-native-skeleton-placeholder": "^5.0.0",
     "react-native-svg": "^13.2.0"
   },
   "devDependencies": {
